--- a/style.css
+++ b/style.css
@@ -4,15 +4,15 @@
 /*Variables css*/
 /*Colores*/
 :root {
-  --first-color: #D8DBE2;
-  --second-color: #F2BF25;
-  --text-color: #000;
-  --white-color: #FFF;
+  --first-color: #d8dbe2;
+  --second-color: #362902;
+  --text-color: #090029e4;
+  --white-color: #fff;
 }
 
 /*Fuente y tipografia*/
 :root {
-  --body-font:'Raleway', sans-serif;
+  --body-font: "Raleway", sans-serif;
   --h2-font-size: 1.25rem;
   --big-font-size: 3rem;
   --normal-font-size: 0.93rem;
@@ -38,9 +38,11 @@
 }
 
 /*----- BASE -----*/
-*, ::before, ::after {
+*,
+::before,
+::after {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -49,12 +51,57 @@ body {
   background-color: var(--first-color);
   /* color: var(--text-color); */
   font-weight: 700;
-  overflow: hidden;
+  color: #14002ade;
+  overflow: scroll;
   background-color: rgba(255, 0, 0, 0.644);
 }
 
-h1, h2 {
+h1,
+h2 {
   margin: 0;
+}
+.logocon {
+  display: grid;
+  grid-template-columns: 400px 400px;
+  /* text-align: center; */
+  width: 60px;
+  height: 60px;
+  margin: 10px;
+}
+a {
+  margin-left: 6px;
+}
+img {
+  margin-right: 8px;
+}
+
+img:hover {
+  transform: scale(1.2);
+}
+
+.profile1 {
+  display: inline-flex;
+  margin-right: 6px;
+}
+.profile2 {
+  display: inline-flex;
+  margin-right: 6px;
+}
+.profile3 {
+  display: inline-flex;
+  margin-right: 6px;
+}
+.profile4 {
+  display: inline-flex;
+  margin-right: 6px;
+}
+img {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  /* margin-left: 6px;
+  margin-bottom: 10px; */
+  border: 1px solid black;
 }
 
 ul {
@@ -65,11 +112,6 @@ ul {
 
 a {
   text-decoration: none;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
 }
 
 /*----- LAYOUT -----*/
@@ -95,11 +137,11 @@ img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-evenly;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 @media screen and (max-width: 768px) {
@@ -108,13 +150,13 @@ img {
     top: 0;
     right: -100%;
     background-color: var(--white-color);
-    width: 85%;
+    width: 100%;
     height: 100vh;
-    padding: .75rem;
+    padding: 0.75rem;
     z-index: var(--z-modal);
     font-weight: 900;
-    -webkit-transition: .5s;
-    transition: .5s;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
   }
 }
 
@@ -137,7 +179,7 @@ img {
 }
 
 .nav__link {
-  padding: .5rem;
+  padding: 0.5rem;
   color: var(--text-color);
   text-transform: uppercase;
 }
@@ -173,14 +215,14 @@ img {
 }
 
 .home {
-  position: relative;
+  position: absolute;
   height: 100%;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 4fr;
-      grid-template-columns: 1fr 4fr;
+  grid-template-columns: 1fr 4fr;
   -ms-flex-line-pack: end;
-      align-content: flex-end;
+  align-content: flex-end;
   z-index: var(--z-normal);
 }
 
@@ -193,21 +235,12 @@ img {
   z-index: var(--z-fixed);
 }
 
-.home__img {
-  position: absolute;
-  top: 10%;
-  left: 22%;
-  width: 235px;
-  height: 353px;
-  z-index: var(--z-tooltip);
-}
-
 .home__social {
   -webkit-writing-mode: vertical-rl;
-      -ms-writing-mode: tb-rl;
-          writing-mode: vertical-rl;
+  -ms-writing-mode: tb-rl;
+  writing-mode: vertical-rl;
   -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
+  transform: rotate(180deg);
   padding-top: 2rem;
 }
 
@@ -219,12 +252,12 @@ img {
 
 .home__subtitle {
   -webkit-writing-mode: vertical-rl;
-      -ms-writing-mode: tb-rl;
-          writing-mode: vertical-rl;
+  -ms-writing-mode: tb-rl;
+  writing-mode: vertical-rl;
   -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
+  transform: rotate(180deg);
   padding-top: 2rem;
-  padding-right: .5rem;
+  padding-right: 0.5rem;
   font-size: var(--h2-font-size);
   font-weight: 900;
 }
@@ -260,7 +293,8 @@ img {
     margin-left: 3rem;
     margin-bottom: 0;
   }
-  .nav__toggle, .nav__close {
+  .nav__toggle,
+  .nav__close {
     display: none;
   }
   .nav__link {
@@ -268,18 +302,13 @@ img {
   }
   .home {
     -ms-grid-columns: 4fr 1fr;
-        grid-template-columns: 4fr 1fr;
+    grid-template-columns: 4fr 1fr;
   }
   .home__title {
     top: 16%;
     left: 23%;
   }
-  .home__img {
-    width: 359px;
-    height: 539px;
-    top: 18%;
-    left: 43%;
-  }
+
   .home__social {
     padding-top: 5rem;
   }
